--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">Tamo's Blog</a>
+                    <H1>
+                        <a class="navbar-brand" href="index.html">Tamo's Blog</a>
+                    </H1>
                     
                 </div>
                 <ul class="nav navbar-nav">
@@ -95,10 +97,10 @@
     </div>
     </main>
 
-    <footer class=”container mt-4">
-        <div class=”row”>
-        <div class=”col”>
-        <p class=”text-center”>Design by Tamo <a href=”#”></a></p>
+    <footer class="container mt-4">
+        <div class="row">
+        <div class="col">
+        <p class="text-center">Design by Tamo <a href='#'></a></p>
         </div>
         </div>
        </footer>
