--- a/Contact.html
+++ b/Contact.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Tamo's Blog, showing some beautifull places in Gergia and in the world">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel=”stylesheet” href=”css/bootstrap.css”>
     <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
     <link rel="stylesheet" href="style/style.css">
     <script src="https://kit.fontawesome.com/0ec2e12077.js" crossorigin="anonymous"></script>
-    <title>Contact Us</title>
+    <title>Tamo's Blog</title>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Destinations.html">Destinations</a></li>
-                    <li><a href="Travel Tips.html">Travel Tips</a></li>
+                    <li><a href="Traveltips.html">Travel Tips</a></li>
                     <li><a href="Contact.html">Contacts</a></li>
                 </ul>
             </div>
@@ -54,20 +55,20 @@
 
 
                         <a class="btn btn-primary btn-lg" style="background-color: #dd4b39;"
-                            href="tamogakhokidze@gmail.com!" role="button" target="_blank"><i
+                            href="https://mail.google.com/mail/u/0/" role="button" target="_blank"><i
                                 class="fab fa-google"></i></a>
                     </div>
 
                     <div class="col-sm-2">
 
                         <a class="btn btn-primary btn-lg" style="background-color: #3b5998;"
-                            href="https://www.facebook.com/tamo.gakhokidze!" role="button" target="_blank"><i
+                            href="https://www.facebook.com/tamo.gakhokidze" role="button" target="_blank"><i
                                 class="fab fa-facebook-f"></i></a>
                     </div>
                     <div class="col-sm-2">
 
                         <a class="btn btn-primary btn-lg" style="background-color: #ac2bac;"
-                            href="https://www.instagram.com/tamogakhokidze/!" role="button" target="_blank"><i
+                            href="https://www.instagram.com/tamogakhokidze/" role="button" target="_blank"><i
                                 class="fab fa-instagram"></i></a>
                     </div>
                     <div class="col-sm-2">
@@ -79,7 +80,7 @@
                     </div>
 
                     <div class="col-sm-2">
-                        <a class="btn btn-primary btn-lg" style="background-color: #25d366 ;" href="https://call.whatsapp.com/video/xgUk4lFXJ96jmMzbXNSbgj!" role="button"
+                        <a class="btn btn-primary btn-lg" style="background-color: #25d366 ;" href="https://call.whatsapp.com/video/xgUk4lFXJ96jmMzbXNSbgj" role="button"
                             target="_blank"><i class="fab fa-whatsapp"></i></a>
 
 
@@ -95,8 +96,6 @@
                 <h2>
                     Contact Us
                 </h2>
-                <!-- <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i> -->
-
 
                 <form action="submitform"></form>
 
@@ -107,27 +106,29 @@
                 </div>
                 <div class="form-group">
                     <i class="fas fa-envelope"></i>
-                    <input type="text" name="Your Email" id="email" placeholder="Email">
+                    <input type="text" name="Email" id="email" placeholder="Email">
                 </div>
 
                 <div class="form-group">
                     <i class="fa fa-message"></i>
-                    <input type="textarea" rows="5" name="comment" id="comment" placeholder="Comment">
+                    <textarea name="comment" id="comment" cols="22" rows="2" placeholder="Comment" ></textarea>
+                    
                 </div>
 
                 <div>
-                    <button onclick="Submit">Submit</button>
+                    <button class="Submit" id="Submit" onclick="submitform ()">Submit</button>
                 </div>
-
-                <!-- <input type="button" value="Submit" id="submit"> -->
             </div>
         </div>
     </main>
 
 
     <footer>
-
+        <p>
+            Tamo's Blog  &#169;  2023
+        </p>
     </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
