--- a/Destinations.html
+++ b/Destinations.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Tamo's Blog, showing some beautifull places in Gergia and in the world">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel=”stylesheet” href=”css/bootstrap.css”>
 <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
     <link rel="stylesheet" href="style/style.css">
     <script src="https://kit.fontawesome.com/0ec2e12077.js" crossorigin="anonymous"></script>
-    <title>Travels</title>
+    <title>Tamo's Blog</title>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Destinations.html">Destinations</a></li>
-                    <li><a href="Travel Tips.html">Travel Tips</a></li>
+                    <li><a href="Traveltips.html">Travel Tips</a></li>
                     <li><a href="Contact.html">Contacts</a></li>
                 </ul>
             </div>
@@ -37,12 +38,11 @@
     <main>
         <div class="view">
             
-        <!-- <div class="container-fluid"> -->
             <div class="row">
                 <div class="col-sm-4">
                     <div class="card">
-                        <div class="image">
-                            <img src="img/kjeragbolten.JPG" class="card-img-top" alt="kjeragbolten, kjerag, Norway">
+                        <div class="image ">
+                            <img src="img/kjeragbolten.JPG" class="card-img-top " alt="kjeragbolten, kjerag, Norway, best places in Norway">
                         </div>
                         <div class="cardbody">
                             <h4>Norway</h4>
@@ -61,7 +61,7 @@
                 <div class="col-sm-4">
                     <div class="card">
                         <div class="image">
-                            <img src="img/horseshoeband.JPG" alt="horseshoeband, US, USA">
+                            <img src="img/horseshoeband.JPG" alt="horseshoeband, US, USA, road trip">
                         </div>
                         <div class="cardbody">
                             <h4>US Road Trip</h4>
@@ -70,7 +70,7 @@
                                 several national parks across the US.
 
                             </p>
-                            <a href="https://www.solosophie.com/best-road-trips-in-the-usa/" data-toggle="tooltip" data-placement="bottom" title="See more about this destination!"target="_blank"> See more .
+                            <a href="https://www.solosophie.com/best-road-trips-in-the-usa/" data-toggle="tooltip" data-placement="bottom" title="See more about this destination!" target="_blank"> See more .
                                 . . </a>
                         </div>
 
@@ -81,7 +81,7 @@
                 <div class="col-sm-4">
                     <div class="card">
                         <div class="image">
-                            <img src="img/blad lake.png" alt="blad lake, Slovenia ">
+                            <img src="img/bladlake.png" alt="blad lake, bled,Slovenia ">
                         </div>
                         <div class="cardbody">
                             <h4>Slovenia</h4>
@@ -104,7 +104,7 @@
                 <div class="col-sm-4">
                     <div class="card">
                         <div class="image">
-                            <img src="img/diving in cyprus.JPG"
+                            <img src="img/divingincyprus.JPG"
                                 alt="cyprus, diving, aya napa underwater museum, Museum of Underwater Sculpture Ayia Napa MUSAN">
                         </div>
                         <div class="cardbody">
@@ -124,7 +124,7 @@
 
                     <div class="card">
                         <div class="image">
-                            <img src="img/jordan.JPG" alt=" jordan, wadi rum, petra">
+                            <img src="img/jordan.JPG" alt=" jordan, wadi rum, petra, desert, red desert">
                         </div>
                         <div class="cardbody">
                             <h4>Jordan</h4>
@@ -140,7 +140,7 @@
                 <div class="col-sm-4">
                     <div class="card">
                         <div class="image">
-                            <img src="img/scotland.JPG" alt="scotland, scotish highlands ">
+                            <img src="img/scotland.JPG" alt="scotland, scotish highlands, sunset, sunset in mountains, mounteering in scotland ">
                         </div>
                         <div class="cardbody">
                             <h4>scotland</h4>
@@ -160,7 +160,9 @@
     </main>
 
     <footer>
-
+        <p>
+            Tamo's Blog  &#169;  2023
+        </p>
     </footer>
 
 
