--- a/Traveltips.html
+++ b/Traveltips.html
@@ -17,7 +17,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <H1>
